# email-processor

./: Cargo.toml  config.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  state.rs
src/domain/: mod.rs  models.rs  validator.rs
src/infrastructure/: config.rs  logging.rs  metrics.rs  mod.rs
src/pipeline/: manager.rs  mod.rs
