[package]
name = "email-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"

# Template rendering
handlebars = "5"

# Validation
regex = "1"
validator = { version = "0.18", features = ["derive"] }

# Parallel processing
rayon = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# [[bench]]
# name = "validation_bench"
# harness = false